// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessListPage component tests Loadmore tests 1`] = `
<LoadMore
  getMoreItems={[Function]}
  isLoadingMore={false}
  offset={0}
  pageSize={10}
  setOffset={[Function]}
>
  <MockedComponent />
</LoadMore>
`;

exports[`ProcessListPage component tests Snapshot tests for no status selected 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--warning-color--100)"
        icon={[Function]}
      >
        <ExclamationTriangleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--warning-color--100)"
        >
          <MockedComponent />
        </ExclamationTriangleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h5"
        size="lg"
      >
        <h5
          className="pf-c-title pf-m-lg"
        >
          No filters applied.
        </h5>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          Try applying at least one filter to see results
        </div>
      </EmptyStateBody>
      <Button
        onClick={[Function]}
        variant="link"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-10"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          Reset to default
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;

exports[`ProcessListPage component tests error in query - without businesskey 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--danger-color--100)"
        icon={[Function]}
      >
        <ExclamationCircleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--danger-color--100)"
        >
          <MockedComponent />
        </ExclamationCircleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h1"
        size="4xl"
      >
        <h1
          className="pf-c-title pf-m-4xl"
        >
          Error fetching data
        </h1>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          An error occurred while accessing data.
           
          <Button
            id="display-error"
            isInline={true}
            onClick={[Function]}
            variant="link"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-9"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              id="display-error"
              onClick={[Function]}
              role={null}
              type="button"
            >
              See more details
            </button>
          </Button>
        </div>
      </EmptyStateBody>
      <Button
        id="goback-button"
        onClick={[Function]}
        variant="primary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="goback-button"
          onClick={[Function]}
          role={null}
          type="button"
        >
          Go back
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;

exports[`ProcessListPage component tests reset click in no status found test 1`] = `
<EmptyState
  variant="full"
>
  <div
    className="pf-c-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        color="var(--pf-global--warning-color--100)"
        icon={[Function]}
      >
        <ExclamationTriangleIcon
          aria-hidden="true"
          className="pf-c-empty-state__icon"
          color="var(--pf-global--warning-color--100)"
        >
          <MockedComponent />
        </ExclamationTriangleIcon>
      </EmptyStateIcon>
      <Title
        headingLevel="h5"
        size="lg"
      >
        <h5
          className="pf-c-title pf-m-lg"
        >
          No filters applied.
        </h5>
      </Title>
      <EmptyStateBody>
        <div
          className="pf-c-empty-state__body"
        >
          Try applying at least one filter to see results
        </div>
      </EmptyStateBody>
      <Button
        onClick={[Function]}
        variant="link"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-11"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          Reset to default
        </button>
      </Button>
    </div>
  </div>
</EmptyState>
`;
